--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "lab2-tdd",
+  "name": "lab3-tdd",
   "version": "1.0.0",
   "description": "Lab2 app",
   "main": "app.js",
   "scripts": {
-    "test": "mocha tests",
+    "test": "jest tests",
     "start": "node src/app.js"
   },
   "engines": {
@@ -13,18 +13,14 @@
   },
 
   
-  "author": "Ramunas Pikcius",
+  "author": "Demouser17",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
     "express": "^4.16.3"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
     "nock": "^9.4.2",
-    "sinon": "^6.1.3",
-    "mocha": "^5.2.0"
+    "sinon": "^6.1.3"
   }
 }
-
-
